--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,52 @@
 .App {
+  padding: 50px;
   text-align: center;
+  background-color: #939393;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+table {
+  background-color: #fff;
+  margin: 0 auto;
+  width: 600px;
+  border-collapse: collapse;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+caption {
+  background-color: green;
+  border-radius: 5px 5px 0 0;
+  line-height: 60px;
   color: white;
+  font-size: 1.5em;
 }
-
-.App-intro {
-  font-size: large;
+th {
+  height: 40px;
+  border-bottom: 1px solid #efefef;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+thead [class="col-left"] {
+  padding-left: 15px;
+}
+.sort {
+  cursor: pointer;
+  text-decoration: underline;
+}
+tr:hover{
+  background-color: #f5f5f5
+}
+td {
+  height: 50px;
+  border-bottom: 1px solid #efefef;
+}
+.num {
+  width: 60px;
+}
+.col-left {
+  text-align: left;
+  width: 250px;
+  padding: 0 5px;
+}
+img {
+  height: 40px;
+  width: 40px;
+  margin: 0 10px;
+  border: 2px solid green;
+  border-radius: 50%;
+  vertical-align: middle;
 }
